[gd_scene load_steps=3 format=3 uid="uid://d3qjlyr2fk64t"]

[ext_resource type="Script" path="res://MenuPrincipal.gd" id="1_7cyqc"]
[ext_resource type="Texture2D" uid="uid://bnj2x5yl5xi1a" path="res://Assets/Art/Tabuleiros/limites_da_floresta.png" id="2_hr8ev"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7cyqc")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hr8ev")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/CenterContainer"]
layout_mode = 2

[node name="Iniciar" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Iniciar"

[node name="BotaoDificuldade" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "FÃ¡cil"

[node name="Sair" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sair"

[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/BotaoDificuldade" to="." method="_on_botao_dificuldade_pressed"]
[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
